# melange-re.github.io

./: .gitignore  .gitmodules  404.html  Makefile  README.md  ahrefs_418209e997de7b3e1afdfd3575944e61695804a30ab7c7f5bf27f64d32935cda  documentation-site.opam  documentation-site.opam.template  dune  dune-project  flake.nix  index.html  mkdocs.yml  package.json  pip-requirements.txt  robots.txt  search.html  sitemap.xml  versions.json
api/: index.html
blog/: 404.html  feed.rss  (+3 more)
docs/: advanced-js-interop.md  api.md  attributes-and-extension-nodes.md  bindings-cookbook.md  build-system.md  communicate-with-javascript.md  community.md  data-types-and-runtime-rep.md  dune  getting-started.md  how-to-guides.md  index.md  language-concepts.md  learn.md  melange-for-x-developers.md  new-to-ocaml.md  overview.md  package-management.md  postcss.config.js  rationale.md  resources.md  roadmap.md  syntaxes.md  try.md  what-is-melange.md  working-with-js-objects-and-values.md
docs/.vitepress/: config.mts  dune.tmLanguage.json  genFeed.ts  ocaml.tmLanguage.json  opam.tmLanguage.json  toggleSyntax.js
docs/.vitepress/blog-output/posts/: dune-universal-libraries-preview.html
docs/.vitepress/theme/: Layout.vue  Switch.vue  Users.vue  custom.css  index.js
docs/.vitepress/theme/blog/: Article.vue  posts.data.ts  style.css
docs/api/: Belt-Array.md  Belt-Float.md  Belt-HashMap-Int.md  Belt-HashMap-String.md  Belt-HashMap.md  Belt-HashSet-Int.md  Belt-HashSet-String.md  Belt-HashSet.md  Belt-Id-MakeComparable-argument-1-M.md  Belt-Id-MakeComparable.md  Belt-Id-MakeComparableU-argument-1-M.md  Belt-Id-MakeComparableU.md  Belt-Id-MakeHashable-argument-1-M.md  Belt-Id-MakeHashable.md  Belt-Id-MakeHashableU-argument-1-M.md  Belt-Id-MakeHashableU.md  Belt-Id-module-type-Comparable.md  Belt-Id-module-type-Hashable.md  Belt-Id.md  Belt-Int.md  Belt-List.md  Belt-Map-Dict.md  Belt-Map-Int.md  Belt-Map-String.md  Belt-Map.md  Belt-MutableMap-Int.md  Belt-MutableMap-String.md  Belt-MutableMap.md  Belt-MutableQueue.md  Belt-MutableSet-Int.md  Belt-MutableSet-String.md  Belt-MutableSet.md  Belt-MutableStack.md  Belt-Option.md  Belt-Range.md  Belt-Result.md  Belt-Set-Dict.md  Belt-Set-Int.md  Belt-Set-String.md  Belt-Set.md  (+188 more)
docs/api/melange/: Belt-Array.md  Belt-Float.md  Belt-HashMap-Int.md  Belt-HashMap-String.md  Belt-HashMap.md  Belt-HashSet-Int.md  Belt-HashSet-String.md  Belt-HashSet.md  Belt-Id-MakeComparable-argument-1-M.md  Belt-Id-MakeComparable.md  Belt-Id-MakeComparableU-argument-1-M.md  Belt-Id-MakeComparableU.md  Belt-Id-MakeHashable-argument-1-M.md  Belt-Id-MakeHashable.md  Belt-Id-MakeHashableU-argument-1-M.md  Belt-Id-MakeHashableU.md  Belt-Id-module-type-Comparable.md  Belt-Id-module-type-Hashable.md  Belt-Id.md  Belt-Int.md  Belt-List.md  Belt-Map-Dict.md  Belt-Map-Int.md  Belt-Map-String.md  Belt-Map.md  Belt-MutableMap-Int.md  Belt-MutableMap-String.md  Belt-MutableMap.md  Belt-MutableQueue.md  Belt-MutableSet-Int.md  Belt-MutableSet-String.md  Belt-MutableSet.md  Belt-MutableStack.md  Belt-Option.md  Belt-Range.md  Belt-Result.md  Belt-Set-Dict.md  Belt-Set-Int.md  Belt-Set-String.md  Belt-Set.md  (+166 more)
docs/api/ml/melange/: Belt-Array.md  Belt-Float.md  Belt-HashMap.md  Belt-HashSet-String.md  Belt-Id-MakeComparableU-argument-1-M.md  Belt-Id-MakeComparableU.md  Belt-Id-MakeHashable.md  Belt-Id-MakeHashableU-argument-1-M.md  Belt-Id-module-type-Comparable.md  Belt-Id-module-type-Hashable.md  Belt-List.md  Belt-Map-Dict.md  Belt-Map-Int.md  Belt-MutableMap.md  Belt-MutableSet-Int.md  Belt-MutableSet-String.md  Belt-MutableSet.md  Belt-Set-Dict.md  Belt-Set-String.md  Belt-SortArray-Int.md  Belt-SortArray.md  Belt.md  Js-Bigint.md  Js-Blob.md  Js-Global.md  Js-Iterator.md  Js-Json.md  Js-Math.md  Js-String.md  Js-Typed_array-DataView.md  Js-Typed_array-Float32Array.md  Js-Typed_array-Int32Array.md  Js-Typed_array-Int8Array.md  Js-Typed_array-Uint16Array.md  Js-Typed_array-Uint8Array.md  Js-Typed_array-Uint8ClampedArray.md  Js-Typed_array.md  Js-Types.md  Js-Undefined.md  Node-Buffer.md  (+41 more)
docs/api/re/melange/: Belt-HashMap-Int.md  Belt-HashSet.md  Belt-Id.md  Belt-Int.md  Belt-Map-String.md  Belt-Map.md  Belt-Option.md  Belt-Result.md  Belt-Set-Int.md  Belt-Set.md  Belt-SortArray-String.md  Dom-Storage.md  Js-Console.md  Js-Exn.md  Js-Float.md  Js-FormData.md  Js-Obj.md  Js-Promise.md  Js-Re.md  Js-Typed_array-Float64Array.md  Js-WeakMap.md  Node-Child_process.md  Node-Fs-Watch.md  Node-Fs.md  Node-Process.md  Node.md  Stdlib-Arg.md  Stdlib-Array.md  Stdlib-Atomic.md  Stdlib-Bytes.md  Stdlib-Digest-BLAKE128.md  Stdlib-Digest-BLAKE256.md  Stdlib-Digest-MD5.md  Stdlib-Digest.md  Stdlib-Dynarray.md  Stdlib-Either.md  Stdlib-Int32.md  Stdlib-LargeFile.md  Stdlib-List.md  Stdlib-ListLabels.md  (+24 more)
docs/blog/posts/: announcing-melange-3.md
docs/css/: extra.css
docs/js/: toggleSyntaxButton.js
docs/melange-book/: celsius-converter-1.md  celsius-converter-2.md  celsius-converter-exception.md  celsius-converter-option.md  counter-1.md  counter.md  guessing-game.md  index.md  installation.md  melange-playground.md  ppx.md  todo.md  vs-code-config.md
docs/public/: melange-cheatsheet.html
playground/: README.md  dune  format.ml  index.html  package.json  vite.config.ts
playground/src/: App.css  App.jsx  Console.js  LocalStorage.js  Worker.js  _app.jsx  _worker.js  app.jsx  console.js  dropdown.jsx  dune  evalWorker.js  examples-dropdown.jsx  examples.js  examples.re  hover.js  index.css  local-storage.js  main.jsx  ml_syntax.js  re_syntax.js  router.js  share-toast.jsx  toaster.jsx  worker.js
playground/src/syntax/: ml.js  re.js
scripts/: add_canonical.ml  add_canonical.t  advanced-js-interop.t  attributes-and-extension-nodes.t  bindings-cookbook.t  build-system.t  celsius-converter-1.t  celsius-converter-exception.t  celsius-converter-option.t  communicate-with-javascript.t  counter.t  data-types-and-runtime-rep.t  dune  extract_code_blocks.ml  fix-blog-paths.js  generate_melange_api_docs.ml  language-concepts.t  melange-playground.t  process_md.ml  working-with-js-objects-and-values.t
(+17624 files in other folders)
