opam-version: "2.0"
synopsis: "Melange documentation site"
description: "Content for the Melange documentation site"
maintainer: [
  "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
authors: [
  "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/melange-re/melange-re.github.io"
bug-reports: "https://github.com/melange-re/melange-re.github.io"
depends: [
  "ocaml"
  "dune" {>= "3.8.0"}
  "reason" {>= "3.12.0" & < "3.13.0"}
  "reason-react"
  "reason-react-ppx"
  "ocamlformat"
  "js_of_ocaml"
  "cmarkit" {dev}
  "melange" {dev} # needs to pin it to get the docs in a stable path
  "melange-playground" {dev}
  "ocaml-lsp-server" {dev}
]
dev-repo: "git+https://github.com/melange-re/melange-re.github.io.git"
pin-depends: [
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#4.0.1-52" ]
  [ "melange-playground.dev" "git+https://github.com/melange-re/melange.git#4.0.1-52" ]
  [ "cmarkit.dev" "git+https://github.com/dbuenzli/cmarkit.git#f37c8ea86fd0be8dba7a8babcee3682e0e047d91" ]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
