(rule
 (alias re)
 (deps communicate-with-javascript.md)
 (target communicate-with-javascript.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:process_md})))))

(rule
 (alias re)
 (action
  (diff
   communicate-with-javascript.md
   communicate-with-javascript.md.processed)))
