(melange.emit
 (target output)
 (alias playground-runtime-js)
 (libraries
  melange
  ; melange doesn't include belt and dom anymore, including them below leads to
  ; `_build/default/playground/output/node_modules` to include the runtimes
  melange.belt
  melange.dom)
 (modules) ; Empty, we just want to the js artifacts from the libraries
 (module_systems es6))

(rule
 (deps
  %{bin:js_of_ocaml}
  (:some-cmi %{lib:reason-react:melange/react.cmi}))
 (target reason-react-cmijs.js)
 (action
  (bash
   "find $(dirname %{some-cmi}) -name \"*.cmi\" -or -name \"*.cmj\" | xargs js_of_ocaml build-fs -o %{target}")))

(executable
 (name format)
 (modules format)
 (modes js)
 (flags
  (:standard -open Ocamlformat_stdlib))
 (libraries js_of_ocaml ocamlformat-lib))

(rule
 (alias playground-assets)
 (deps ../melange/playground/mel_playground.bc.js)
 (target mel_playground.bc.js)
 (action
  (copy %{deps} %{target})))

(rule
 (alias playground-assets)
 (deps ../melange/playground/melange-cmijs.js)
 (target melange-cmijs.js)
 (action
  (copy %{deps} %{target})))

(rule
 (alias playground-assets)
 (deps
  (alias playground-runtime-js)
  format.bc.js
  reason-react-cmijs.js
  mel_playground.bc.js
  melange-cmijs.js)
 (action
  (echo "assets generated")))
