(executable
 (name process_md)
 (public_name process_md)
 (modules process_md)
 (libraries cmarkit reason))

(executable
 (name extract_code_blocks)
 (public_name extract_code_blocks)
 (modules extract_code_blocks)
 (libraries cmarkit))

(executable
 (name add_canonical)
 (public_name add_canonical)
 (modules add_canonical)
 (libraries str unix))

(cram
 (applies_to add_canonical)
 (deps %{bin:add_canonical}))

(rule
 (deps ../docs/communicate-with-javascript.md)
 (target communicate-with-javascript.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} ocaml)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff
   communicate-with-javascript.t
   communicate-with-javascript.md.processed)))

(rule
 (deps ../docs/build-system.md)
 (target build-system.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} ocaml)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff build-system.t build-system.md.processed)))

(rule
 (deps ../docs/melange-book/counter.md)
 (target counter.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} reason reason-react reason-react-ppx)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff counter.t counter.md.processed)))

(rule
 (deps ../docs/melange-book/melange-playground.md)
 (target melange-playground.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} reason reason-react reason-react-ppx)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff melange-playground.t melange-playground.md.processed)))

(rule
 (deps ../docs/melange-book/celsius-converter-exception.md)
 (target celsius-converter-exception.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} reason reason-react reason-react-ppx)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff
   celsius-converter-exception.t
   celsius-converter-exception.md.processed)))

(rule
 (deps ../docs/melange-book/celsius-converter-option.md)
 (target celsius-converter-option.md.processed)
 (action
  (with-stdout-to
   %{target}
   (with-stdin-from
    %{deps}
    (run %{bin:extract_code_blocks} reason reason-react reason-react-ppx)))))

(rule
 (alias extract-code-blocks)
 (action
  (diff celsius-converter-option.t celsius-converter-option.md.processed)))
